--- a/src/pages/Dashboard/Dashboard.module.scss
+++ b/src/pages/Dashboard/Dashboard.module.scss
@@ -9,18 +9,25 @@
 
 .topic {
   position: absolute;
-  width: 100%;
-  height: 135%;
-  top: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  bottom: 20vh;
+  left: 5vw;
   color: #fff;
-  right: 50vh;
   font-size: 5vw;
-
   font-family: 'Aclonica', sans-serif;
   font-weight: 700;
   font-style: normal;
 }
+
+@media (max-width: 991px) {
+  .topic {
+    font-size: 8vw;
+  }
+}
+
+@media (max-width: 500px) {
+  .topic {
+    font-size: 12vw;
+  }
+}
+
+
