--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -2,7 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  position: absolute;
+  position: fixed;
+  top: 0;
   width: 100%;
   height: 80px;
   padding: 0 2rem;
@@ -64,7 +65,7 @@
   }
 
   &:hover {
-    background-color: var(--white);
+    background-color: rgba(255, 255, 255, 0.8);
     transition: 0.8s;
 
     .header__logo {
@@ -115,5 +116,6 @@
 }
 
 .responsiveNav {
-  transform: translateY(50vh);
+  top: 0px;
+  transition: top 0.5s ease;
 }
