--- a/src/pages/Dashboard/Dashboard.module.scss
+++ b/src/pages/Dashboard/Dashboard.module.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  position: absolute;
+  // position: absolute;
 }
 
 .topic {
@@ -29,5 +29,3 @@
     font-size: 12vw;
   }
 }
-
-
