--- a/src/pages/Dashboard/Dashboard.module.scss
+++ b/src/pages/Dashboard/Dashboard.module.scss
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Aclonica&family=Anton&family=Autour+One&family=Bowlby+One&family=Caveat+Brush&family=Chicle&family=Spicy+Rice&family=Ubuntu:wght@300&display=swap');
+.dashboard {
+  position: relative;
+}
 
 .bgVideo {
   width: 100%;
